# tispark

./: Cargo.toml  README.md
commit-reveal-pallet/: Cargo.toml
commit-reveal-pallet/src/: impls.rs  lib.rs  types.rs
contracts/: README.md
contracts/aleph-consensus-client/: Cargo.toml  rust-toolchain.toml
contracts/aleph-consensus-client/src/: lib.rs
contracts/aleph-consensus-client/src/traits/: mod.rs
contracts/aleph-consensus-client/src/types/: mod.rs
contracts/tispark-client/: Cargo.toml
contracts/tispark-client/src/: lib.rs
contracts/tispark-client/src/contract_ref/: mod.rs
contracts/tispark-client/src/mocks/: mod.rs
contracts/tispark-client/src/tispark_client_ref/: mod.rs
contracts/tispark-client/src/traits/: mod.rs
contracts/tispark-client/src/types/: mod.rs
contracts/tispark-client/src/types/auth/: mod.rs
contracts/tispark-client/src/types/commitment/: mod.rs
contracts/tispark-client/src/types/consensus/: mod.rs
contracts/tispark-client/src/types/message/: mod.rs  request_response.rs  sign.rs
contracts/tispark-client/src/types/state/: mod.rs
contracts/tispark-manager/: Cargo.toml  lib.rs  manager_ref.rs
contracts/tispark-rpc/: Cargo.toml  lib.rs
contracts/tispark-rpc/types/: chain_state.rs  consensus.rs  mod.rs
contracts/utils/: Cargo.toml
contracts/utils/src/: lib.rs
contracts/utils/src/types/: mod.rs
contracts/utils/src/types/auth/: mod.rs
contracts/utils/src/types/crypto/: mod.rs
crypto/: Cargo.toml
crypto/src/: aead.rs  key_derive.rs  lib.rs
light-client/: Cargo.toml
light-client/src/: consensus.rs  lib.rs  state.rs
light-client/src/finality/: README.md  crypto.rs  mod.rs  types.rs
light-client/src/finality/justification/: compatibility.rs  mod.rs
pallet-commit-reveal/: Cargo.toml
pallet-commit-reveal/src/: impls.rs  lib.rs  types.rs
primitives/: Cargo.toml
primitives/src/: commit_reveal.rs  lib.rs  phala_ismp.rs  state_proofs.rs
