[workspace]
resolver = "2"

members = [
    "crypto",
    "primitives",
    "light-client",
    "contracts/aleph-consensus-client",
    "commit-reveal-pallet",
    "contracts/tispark-client",
    "contracts/utils",
]

[profile.release]
# Substrate runtime requires unwinding.
panic = "unwind"

[workspace.package]
authors = ["Menna <emanuele.cryptdev@gmail.com>"]
edition = "2021"
repository = "https://github.com/0xMenna01/tispark"
