[workspace]
resolver = "2"

members = [
    "crypto",
    "primitives",
    "light-client",
    "commit-reveal-pallet",
    "contracts/aleph-consensus-client",
    "contracts/tispark-client",
    "contracts/tispark-manager",
    "contracts/tispark-rpc",
    "contracts/utils",
]

[profile.release]
# Substrate runtime requires unwinding.
panic = "unwind"

[workspace.package]
authors = ["Menna <emanuele.cryptdev@gmail.com>"]
edition = "2021"
repository = "https://github.com/0xMenna01/tispark"
