[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
sp-core = { git = "https://github.com/Cardinal-Cryptography/substrate.git", branch = "aleph-v0.9.42", default-features = false }
sp-application-crypto = { git = "https://github.com/Cardinal-Cryptography/substrate.git", branch = "aleph-v0.9.42", default-features = false }
ring = { version = "0.16.20", default-features = false, features = ["alloc"] }

[dev-dependencies]
rand = "0.8.5"
hex = "0.4"

[features]
default = [ "std" ]
std = [ 
    "sp-application-crypto/std",
    "sp-core/std",
]
full_crypto = [
    "sp-core/full_crypto",
    "sp-application-crypto/full_crypto",
]