[package]
name = "light-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive"] }
scale-info = { version = "2.5.0", default-features = false, features = ["derive", "serde"] }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }
hex = { version = "0.4", default-features = false }
log = { version = "0.4.17", default-features = false }
derive_more = { version = "0.99", default-features = false }

aleph-bft-crypto = { version = "0.5", default-features = false }
current-aleph-bft = { package = "aleph-bft", version = "0.20", default-features = false }
legacy-aleph-bft = { package = "aleph-bft", version = "0.19", default-features = false }
ismp = { git = "https://github.com/polytope-labs/ismp-rs", branch = "main", default-features = false }

primitives = { path = "../primitives" }

[features]
default = ["std"]
std = [
    "log/std",
    "codec/std",
    "scale-info/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-application-crypto/std",
]
ink-as-dependency = []

