[package]
name = "light-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive"] }
scale-info = { version = "2.5.0", default-features = false, features = ["derive", "serde"] }
sp-runtime = { git = "https://github.com/Cardinal-Cryptography/substrate.git", branch = "aleph-v0.9.42", default-features = false }
sp-core = { git = "https://github.com/Cardinal-Cryptography/substrate.git", branch = "aleph-v0.9.42", default-features = false }
sp-application-crypto = { git = "https://github.com/Cardinal-Cryptography/substrate.git", branch = "aleph-v0.9.42", default-features = false }
hex = { version = "0.4", default-features = false }
log = { version = "0.4.17", default-features = false }
derive_more = { version = "0.99", default-features = false }
bit-vec = { version = "0.6", default-features = false }

ismp = { git = "https://github.com/polytope-labs/ismp-rs", branch = "main", default-features = false }
pink-extension = { version = "0.4", default-features = false }
ink_env = { version = "4", default-features = false }
hash256-std-hasher = { version = "0.11.0", default-features = false }

primitives = { path = "../primitives", default-features = false }

[features]
default = ["std"]
std = [
    "log/std",
    "hash256-std-hasher/std",
    "codec/std",
    "scale-info/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-application-crypto/std",
    "pink-extension/std",
    "ink_env/std",
    "ismp/std",
    "primitives/std",
]
ink-as-dependency = []

