[package]
name = "primitives"
version = "0.1.0"
authors = ["Menna <emanuele.cryptdev@gmail.com>"]
edition = "2021"
description = "Primitives for commit-reveal scheme"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive"] }
scale-info = { version = "2.5.0", default-features = false, features = ["derive", "serde"] }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }
sp-trie = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0", default-features = false }
log = { version = "0.4.17", default-features = false }

ring = { version = "0.16.20", default-features = false, features = ["alloc"] }
ismp = { git = "https://github.com/polytope-labs/ismp-rs", branch = "main", default-features = false }

crypto = { path = "../crypto" }


[features]
default = [ "std" ]
std = [
	"codec/std",
	"log/std",
	"scale-info/std",
	"sp-application-crypto/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-trie/std",
]
runtime-benchmarks = [
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"sp-runtime/try-runtime",
]
