[package]
name = "primitives"
version = "0.1.0"
authors = ["Menna <emanuele.cryptdev@gmail.com>"]
edition = "2021"
description = "Primitives for commit-reveal scheme"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive"] }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
sp-application-crypto = { git = "https://github.com/Cardinal-Cryptography/substrate.git", branch = "aleph-v0.9.42", default-features = false }
sp-core = { git = "https://github.com/Cardinal-Cryptography/substrate.git", branch = "aleph-v0.9.42", default-features = false }
sp-runtime = { git = "https://github.com/Cardinal-Cryptography/substrate.git", branch = "aleph-v0.9.42", default-features = false }
sp-std = { git = "https://github.com/Cardinal-Cryptography/substrate.git", branch = "aleph-v0.9.42", default-features = false }
sp-trie = { git = "https://github.com/Cardinal-Cryptography/substrate.git", branch = "aleph-v0.9.42", default-features = false }
log = { version = "0.4.17", default-features = false }

ring = { version = "0.16.20", default-features = false, features = ["alloc"] }
ismp = { path = "https://github.com/0xMenna01/ismp-rs", default-features = false }

crypto = { path = "../crypto", default-features }


[features]
default = [ "std" ]
std = [
	"codec/std",
	"log/std",
	"scale-info/std",
	"sp-application-crypto/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-trie/std",
	"ismp/std",
	"crypto/std",
]
runtime-benchmarks = [
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"sp-runtime/try-runtime",
]
