[package]
name = "aleph-consensus-client"
version = "0.1.0"
authors = ["Menna <emanuele.cryptdev@gmail.com>"]
edition = "2021"


[dependencies]
ink = { version = "4", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.2.0", default-features = false, features = ["disable_allocator"] }

hex = { version = "0.4", default-features = false }

pink-extension = { version = "0.4", default-features = false }
utils = { path = "../utils", default-features = false }

tispark-primitives = { package = "primitives", path = "../../primitives", default-features = false, features = ["full_crypto"] }
light-client = { path = "../../light-client", default-features = false }

[dev-dependencies]
pink-extension-runtime = "0.4"

[lib]
path = "src/lib.rs"


[patch.crates-io]
ring = { git = "https://github.com/0xMenna01/ring-xous", branch = "better-wasm32-support" }


[features]
default = ["std"]
std = [
    "ink/std",
    "sp-io/std",
    "scale/std", 
    "scale-info/std",
    "pink-extension/std",
    "light-client/std",
    "tispark-primitives/std",
    "utils/std",
]
ink-as-dependency = []

