[package]
name = "tispark-rpc"
version = "0.1.0"
authors = ["0xMenna <emanuele.cryptdev@gmail.com>"]
edition = "2021"

[dependencies]
ink = { version = "4", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-json-core = { version = "0.4.0" }
hex-literal = "0.3.4"
pink-extension = { version = "0.4", default-features = false }
hex = { version = "0.4", default-features = false }
tispark-primitives = { package = "primitives", path = "../../primitives", default-features = false, features = ["full_crypto"] }
aleph-consensus-client = { path = "../aleph-consensus-client", default-features = false, features = ["ink-as-dependency"] }
light-client = { path = "../../light-client", default-features = false }
utils = { path = "../utils", default-features = false }
crypto = { path = "../../crypto", default-features = false, features = ["full_crypto"] }

[dev-dependencies]
pink-extension-runtime = "0.4"

[patch.crates-io]
ring = { git = "https://github.com/0xMenna01/ring-xous", branch = "better-wasm32-support" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "pink-extension/std",
    "utils/std",
    "serde-json-core/std",
    "crypto/std",
    "light-client/std",
    "tispark-primitives/std",
    "aleph-consensus-client/std",
]
ink-as-dependency = []
