[package]
name = "utils"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ink = { version = "4", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }
serde = { version = "1.0", default-features = false, features = ["derive"] }
hex = { version = "0.4", default-features = false }
pink-extension = { version = "0.4", default-features = false }
hash256-std-hasher = { version = "0.11.0", default-features = false }
byteorder = { version = "1.5.0", default-features = false }
twox-hash = { version = "1.6.3", default-features = false }
digest = { version = "0.10.7", default-features = false }

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "pink-extension/std",
    "hash256-std-hasher/std",
]
ink-as-dependency = []
